--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,5 +29,9 @@ name = "day3"
 path = "src/day3.rs"
 
 [[bin]]
+name = "day5"
+path = "src/day5.rs"
+
+[[bin]]
 name = "day4"
 path = "src/day4.rs"
